<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_open_bills_activity"
        android:title="@string/action_bills"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_logs_activity"
        android:title="@string/action_logs"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_product"
        android:title="@string/action_add_product"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_delete_all_product"
        android:title="@string/action_delete_all_product"
        app:showAsAction="never"
        />

</menu>