<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".company.EditorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/name_title"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/name_of_the_product"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price_title"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/price_hint"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/code_title"/>

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_code"
                android:hint="@string/code_hint"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                android:layout_width="match_parent" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/quantity_text_view"
            android:textAlignment="center"
            />


        <TextView
            style="@style/CategoryStyle"
            android:textAlignment="center"
            android:text="@string/quantity_limit"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <NumberPicker
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/product_quantity"
            android:layout_margin="16dp"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/product_quantity_limit"
            android:layout_margin="16dp"
            android:layout_height="wrap_content" />

    </LinearLayout>






</LinearLayout>